...
    <!-- ProfileViewModel -->
    <string name="profile_vm_not_signed_in">Not signed in.</string>
    <string name="profile_vm_failed_to_save">Failed to save:</string>


    <!-- ViewUserProfileScreen -->
    <string name="view_user_profile_send_message">Send a message</string>
    <string name="view_user_profile_block_user">Block user</string>
    <string name="view_user_profile_unblock_user">Unblock user</string>

    <!-- ViewUserProfileViewModel -->
    <string name="view_user_profile_not_signed_in">Not signed in</string>
    <string name="view_user_profile_failed_to_block_user">Failed to block user</string>
...
    <string name="settings_qr_button">Scan MySwissDorm QR code</string>
    <string name="settings_qr_prompt">Point the camera at a MySwissDorm QR code</string>
    <string name="settings_qr_scan_cancelled">Scan cancelled</string>
    <string name="settings_qr_invalid_domain">This is not a MySwissDorm link.</string>

    <!-- ViewProfileScreen -->
    <string name="view_profile_has_msg">You have already contacted this user.</string>
    <string name="view_profile_has_msg_secondary">Please wait for an answer or go to your inbox to send another message.</string>
    <string name="write_msg">Write a message…</string>

    <!-- Offline -->
    <string name="offline_banner_you_are_offline">You\'re offline</string>
    <string name="offline_banner_last_updated">Last updated %1$s</string>
...
